add agenda panel

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Calendar</title>
+    <!-- Name of web application (only should be used if the website is used as an app) -->
+    <meta name="application-name" content="Application Name">
+    <!-- Short description of the document (limit to 150 characters) -->
+    <!-- This content *may* be used as a part of search engine results. -->
+    <meta name="description" content="A description of the page">
+    <!--
+      https://gethead.info/
+      https://developers.google.com/web/fundamentals/web-app-manifest/#top_of_page
+    -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
