--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Calendar</title>
+    <title>Weekly (alpha)</title>
     <!-- Name of web application (only should be used if the website is used as an app) -->
     <meta name="application-name" content="Application Name">
     <!-- Short description of the document (limit to 150 characters) -->
